# dockerfiles

./: .codespellignore  .dockerignore  .gitignore  AGENTS.md  BUILD_STATUS.md  Dockerfile.reference  LICENSE  README.md  SECURITY.md
.allstar/: branch_protection.yaml  security.yaml
.github/: FUNDING.yml  dependabot.yml  renovate.json
.github/workflows/: adguardhome.yml  age.yml  ali.yml  alpine.yml  amass.yml  ansible.yml  anteon.yml  aznamingtool.yml  bl3auto.yml  black.yml  catprinter.yml  cf-warp.yml  checkov.yml  cloudflared-snyk.yml  cloudflared.yml  codespell.yml  coredns.yml  ddosify.yml  dependency-review.yml  dhcp-helper.yml  dive.yml  dkimpy.yml  dnscontrol.yml  dnscrypt-proxy-docs.yml  dnscrypt-proxy-snyk.yml  dnscrypt-proxy.yml  dnsx.yml  docker-autocompose.yml  docker-bench-security.yml  driftctl.yml  dry.yml  dsq.yml  excalidraw.yml  fq.yml  freenginx.yml  gitlabsync.yml  gitleaks.yml  gobgp.yml  gocannon.yml  golang.yml  (+67 more)
adguardhome/: Dockerfile  README.md
age/: Dockerfile  README.md
ali/: Dockerfile  README.md
amass/: Dockerfile  README.md
ansible/: Dockerfile  Dockerfile.alpine  Dockerfile.orig  Dockerfile.ubuntu  Pipfile  README.md  pyproject.toml  requirements.txt
anteon/: Dockerfile  README.md
aznamingtool/: Dockerfile  Dockerfile.alpine  Dockerfile.debian  Pipfile  README.md
bl3auto/: Dockerfile  README.md
black/: Dockerfile  README.md
catprinter/: Dockerfile  Dockerfile.alpine.NOTWORKING  Pipfile  README.md  pyproject.toml  requirements.txt
cf-warp/: Dockerfile  Dockerfile.bun  README.md
cloudflared/: Dockerfile  Dockerfile.orig  README.md
coredns/: Dockerfile
ddosify/: Dockerfile  README.md
dhcp-helper/: Dockerfile  README.md
dive/: Dockerfile
dkimpy/: Dockerfile  Dockerfile.alpine  Dockerfile.ubuntu  Pipfile  README.md  pyproject.toml  requirements.txt  test.msg
dnscontrol/: Dockerfile  README.md
dnscrypt-proxy/: Dockerfile  README.md  dnscrypt-proxy.toml
dnscrypt-proxy/.github/workflows/: default.yml
dnsx/: Dockerfile  README.md
docker-autocompose/: 1  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt
docker-bench-security/: Dockerfile  README.md
driftctl/: Dockerfile  README.md
dry/: Dockerfile  README.md
dsq/: Dockerfile  Dockerfile.gotip  README.md
excalidraw/: Dockerfile  Dockerfile.bun  README.md
fq/: Dockerfile  README.md
freenginx/: Dockerfile  Dockerfile.alpine  README.md
freenginx/files/: nginx.conf
gobgp/: Dockerfile  README.md
gocannon/: Dockerfile  README.md
goplay2/: Dockerfile  README.md
goreplay/: Dockerfile  README.md
gotip/: Dockerfile  README.md
gron/: Dockerfile  README.md
hakrawler/: Dockerfile  README.md
headscale/: Dockerfile  README.md
httpie-go/: Dockerfile  README.md
httprobe/: Dockerfile  README.md
httpx/: Dockerfile  README.md
imapsync/: Dockerfile  README.md
lego/: Dockerfile  README.md
log4j-scan/: Dockerfile  README.md
logmepwn/: Dockerfile  README.md
lpar2rrd/: Dockerfile  README.md  startup.sh  supervisord.conf
lpar2rrd/configs/: .htaccess  crontab
lpar2rrd/configs/apache2/: hardening.conf  htpasswd  lpar2rrd.conf
miller/: Dockerfile  README.md
nebula/: Dockerfile  README.md
netmaker/: Dockerfile  README.md
nginx/: Dockerfile  Dockerfile.alpine  Dockerfile.orig  README.md
nginx-distroless/: Dockerfile  Dockerfile.stable  README.md
nginx-quic/: Dockerfile  Dockerfile.alpine.boringssl  Dockerfile.alpine.quictls  Dockerfile.ubuntu  Dockerfile.ubuntu.boringssl  Dockerfile.ubuntu.boringssl.ninja  Dockerfile.ubuntu.quictls  README.md
nginx-quic/files/: index.html  nginx.conf
nginx/files/: index.html
ntfy/: Dockerfile  README.md
octosql/: Dockerfile  README.md
onetun/: Cargo.toml  Dockerfile  README.md
opentofu/: Dockerfile  README.md
pia-wg/: Dockerfile  README.md  entrypoint.sh
prettier/: Dockerfile  README.md
pstcli/: Dockerfile  README.md
pwru/: Dockerfile  Dockerfile.alpine  Dockerfile.ubuntu  README.md
rclone/: Dockerfile  README.md
rdap/: Dockerfile  README.md
ruff/: Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt
rustybgp/: Cargo.toml  Dockerfile  README.md
sandbox/: README.md
sandbox/catprinter/: Dockerfile  Dockerfile.alpine  Dockerfile.ubuntu  Pipfile
sandbox/s6/nginx/: Dockerfile
sandbox/unbound/: Dockerfile
scripts/: PROGRAMS  SOURCE_REPOS  checkWorkflows.sh  rebuildAllGo.sh  updateDockerImages.sh  updateHashes.sh  updatePythonDeps.sh
sftpd/: Dockerfile  README.md
sftpd/files/: sshd_config
snowball/: Dockerfile  README.md
spicedb/: Dockerfile  README.md
ssh-audit/: Dockerfile  README.md
sslyze/: Dockerfile  Dockerfile.alpine  Dockerfile.python  Dockerfile.ubuntu  Pipfile  README.md  pyproject.toml  requirements.txt
stor2rrd/: Dockerfile  README.md  startup.sh
stor2rrd/configs/: .htaccess  crontab
stor2rrd/configs/apache2/: stor2rrd.conf
subfinder/: Dockerfile  README.md
tailscale/: Dockerfile  README.md  entrypoint.sh
templates/: Dockerfile.go  Dockerfile.go-minimal  Dockerfile.go-mod  Dockerfile.go-tar  README.md  github-action-sample.yml
templates/alpine/: Dockerfile  README.md
templates/golang/: Dockerfile  README.md
terraform/: Dockerfile  README.md
testssl.sh/: Dockerfile  Dockerfile.git  Dockerfile.orig  Dockerfile.ubuntu  README.md
textql/: Dockerfile  README.md
tftpd/: Dockerfile  README.md  pxelinux.cfg
toxiproxy/: Dockerfile  README.md
trufflehog/: Dockerfile  README.md
unbound/: Dockerfile  README.md
vegeta/: Dockerfile  README.md
visidata/: .visidatarc  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt
watchtower/: Dockerfile  README.md
whois/: Dockerfile  README.md
wuzz/: Dockerfile  README.md
xormon-ng/: Dockerfile  README.md  startup.sh
yggdrasil-go/: Dockerfile  README.md
youtube-dl/: Dockerfile  README.md
yt-dlp/: Dockerfile  Dockerfile.nightly  README.md
zola/: Dockerfile  README.md
