[project]
name = "sslyze-project"
dynamic = ["version"]
description = "Project using sslyze, nassl, cryptography, tls-parser, and pydantic"
authors = [{ name = "Jauder Ho" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = "==3.13.*"
keywords = ["sslyze", "tls", "nassl", "cryptography", "pydantic"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "sslyze",
  "nassl",
  "cryptography",
  "tls-parser",
  "pydantic"
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]
# Override sslyze's upper bound on cryptography (sslyze pins cryptography<47).
# Tested working up to cryptography 49.x; the build installs the closure with
# pip --no-deps to bypass the same cap at install time. See Dockerfile.
override-dependencies = ["cryptography>=43"]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }
